workshop04/myappv1-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  myappv1
  labels:
    name:  myapp
    version: v1
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      name: myapp
      version: v1
  template:
    metadata:
      labels:
        name:  myapp
        version: v1
    spec:
      containers:
      - image: stackupiss/northwind-app:v1
        name:  myapp
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        ports:
        - containerPort:  3000
          name:  myappport
        imagePullPolicy: Always
      restartPolicy: Always
