workshop04/myappv2-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  myappv2
  labels:
    name:  myapp
    version: v2
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      name: myapp
      version: v2
  template:
    metadata:
      labels:
        name:  myapp
        version: v2
    spec:
      containers:
      - image: stackupiss/northwind-app:v2
        name:  myapp
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: /ready
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 2
        ports:
        - containerPort:  3000
          name:  myappport
        imagePullPolicy: Always
      restartPolicy: Always
