workshop04/deploy-svc.yml
kind: Service
apiVersion: v1
metadata:
  name:  fortunesvc
spec:
  selector:
    name:  fortuneapp
  type:  LoadBalancer
  ports:
  - name:  fortuneport
    port:  80
    targetPort:  3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortuneapp
spec:
  replicas: 4
  selector:
    matchLabels:
      name: fortuneapp
  template:
    metadata:
      labels:
        name: fortuneapp
    spec:
      containers:
      - name: fortuneapp
        image: stackupiss/fortune:v1
        ports:
        - containerPort: 3000
          name: fortuneport
