workshop04/myappv2-svc.yml
kind: Service
apiVersion: v1
metadata:
  name:  myappv2svc
spec:
  selector:
    name: myapp
    version: v2
  type:  ClusterIP
  ports:
  - name:  myappv2port
    port:  80
    targetPort:  3000
